Updates from Overleaf

--- a/Sadeghi_Mahdiar_CCSP2019PhDQuals/main.tex
+++ b/Sadeghi_Mahdiar_CCSP2019PhDQuals/main.tex
@@ -453,7 +453,7 @@ predicted 42--48~dBA baseline); 24-hour characterization will validate predictio
 \begin{enumerate}[noitemsep]
     \item \textbf{WiFi infrastructure available and accessible in target facilities:} Consequence if false: Must add LoRa gateway (\$150 hardware) + cellular backhaul SIM card (\$10/month data plan) or Zigbee coordinator (\$50), increasing system cost by 50--100\% and eliminating primary cost advantage of WiFi reuse; implementation timeline extends by 2+ weeks for gateway configuration and custom network protocol. Confidence: High for modern institutional settings (libraries, hospitals, airports all provide WiFi for public/staff use); validated by Northeastern campus site survey (eduroam/NUwave enterprise WiFi detected with RSSI -45 to -55~dBAm excellent signal strength); healthcare facility likely has guest WiFi (industry standard for patient/family connectivity). Risk mitigation: Confirmed via physical site visit and smartphone WiFi scanning; worst-case fallback to mobile hotspot for proof-of-concept demonstration (validates technical functionality even if facility WiFi unavailable).
     
-    \item \textbf{Quiet zone acoustic standard is 40--50~dBA SPL:} Consequence if false: If facilities require stricter standard ($<$35~dBA, e.g., recording studios, meditation centers), MAX9814 noise floor (33~dBA SPL equivalent from 61~dBA SNR) approaches measurement limit, reducing detection margin from 12~dBA to 2~dBA; accuracy may degrade to $\pm$5~dBA in 35--40~dBA range; would necessitate upgrade to studio-grade measurement microphone (\$40--100 with $<$25~dBA noise floor) or precision MEMS sensor. Confidence: Medium-High; ANSI S12.60-2010 specifies 35~dBA background maximum for core learning spaces (classrooms, libraries similar); WHO Guidelines for Community Noise (1999) recommend $<$35~dBA for sleep areas, $<$40~dBA for living areas; observed library signage posts ``SILENT STUDY'' without numeric threshold (industry practice: 40--50~dBA typical per Patel et al., 2015, Journal of Academic Librarianship); healthcare ``Reflection Room'' likely 40--45~dBA standard. Risk: Acceptable; if $<$35~dBA required, document sensor limitation and recommend precision alternative for production.
+    \item \textbf{Quiet zone acoustic standard is 40--50~dBA SPL:} Consequence if false: If facilities require stricter standard ($<$35~dBA, e.g., recording studios, meditation centers), MAX9814 noise floor (33~dBA SPL equivalent from 61~dBA SNR) approaches measurement limit, reducing detection margin from 12~dBA to 2~dBA; accuracy may degrade to $\pm$5~dBA in 35--40~dBA range; would necessitate upgrade to studio-grade measurement microphone (\$40--100 with $<$25~dBA noise floor) or precision MEMS sensor. Confidence: Medium-High; ANSI S12.60-2010~\cite{ansi2010} specifies 35~dBA background maximum for core learning spaces (classrooms, libraries similar); WHO Guidelines for Community Noise (1999) recommend $<$35~dBA for sleep areas, $<$40~dBA for living areas; observed library signage posts ``SILENT STUDY'' without numeric threshold (industry practice: 40--50~dBA typical per Patel et al., 2015, Journal of Academic Librarianship); healthcare ``Reflection Room'' likely 40--45~dBA standard. Risk: Acceptable; if $<$35~dBA required, document sensor limitation and recommend precision alternative for production.
     
     \item \textbf{Bench/lab testing environment representative of actual facility deployment:} Consequence if false: Controlled laboratory testing (quiet room, no foot traffic, predictable HVAC) may not reveal issues specific to real institutional environments: (a) RF interference from elevator motors, fluorescent lighting, medical equipment (degrades WiFi), (b) acoustic reflections from specific room geometries not anticipated (corner resonances, flutter echoes from parallel walls affecting RMS calculations), (c) user behavioral factors (students moving sensors, unplugging for phone charging, deliberate threshold testing), (d) institutional IT policies (firewall blocking outbound HTTPS, MAC address filtering, bandwidth throttling). Confidence: Medium; bench testing validates technical functionality (sensor accuracy, WiFi transmission protocol, threshold detection logic, calibration procedure) but cannot simulate all human/environmental interactions of real deployment. Mitigation: Phased validation approach: (1) lab/dorm controlled testing establishes baseline performance, (2) limited 1-week pilot in single accessible campus location (e.g., study room in student center with permission), (3) comparison of lab vs field data identifies deployment-specific adjustments needed, (4) full facility deployment only after pilot success. Accept that some unknowns remain until field deployment; design for adaptability (configurable thresholds, firmware updates via USB).
 \end{enumerate}
