Updates from Overleaf

--- a/Sadeghi_Mahdiar_CCSP2019PhDQuals/main.tex
+++ b/Sadeghi_Mahdiar_CCSP2019PhDQuals/main.tex
@@ -38,9 +38,9 @@
 \author{%
     \textbf{Student Name:} Aiisha Matsungo\\
     \textbf{NUID:} 002530298\\
-    \textbf{GitHub Repo:} @Aiisha487\\
+    \textbf{GitHub Repo:}  Aiisha487/Aiisha-Matsungo-IoT-Project\\
     \textbf{Track:} Implementation\\
-    \textbf{Date:} February 4, 2026\\
+    \textbf{Date:} Spring, 2026\\
     \textbf{Version:} 1.0
 }
 
@@ -610,7 +610,7 @@ Hearing Yourself Think: Ambient Sound in Library Study Spaces.
 
 \vspace{1em}
 
-\noindent Signature: \underline{\hspace{5cm}} \hfill Date: \underline{February~4, 2026\hspace{1cm}}
+\noindent Signature: \underline{Aiisha Matsungo\hspace{1cm}} \hfill Date: \underline{February~4, 2026\hspace{1cm}}
 
 % ============================================================================
 % END OF DOCUMENT
